# gui-tester

./: .gitignore  LICENSE  README.md  pyproject.toml
comp_use/: __init__.py
comp_use/custom_agent/: README.md  __init__.py  agent_logger.py  comp_agent_launch.py  comp_use_env.py  custom_comp_use_agent.py  playwright_env.py  pyautogui_env.py  run.py
comp_use/custom_agent/config/agent/: default_agent.json  gpt_agent.json  llava_agent.json  qwen_agent.json
comp_use/custom_agent/config/environment/: playwright_gpt.json  playwright_qwen.json  pyautogui.json  pyautogui_gpt.json
comp_use/tools/: __init__.py  docker.py  playwright.py  playwrite.py  qwen_tool_computer_use.py  tool_browser_use.py  tool_browser_use_minimal.py  tool_playwright_gpt.py  tool_playwright_qwen.py  tool_pyautogui_gpt.py
docs/: dev.md  gui_tester_mcp.md  planning.md  roadmap.md
gui_tester/: __init__.py  __main__.py  run_gui_tester.py
gui_tester/config/: default_tester_config.json
gui_tester/mcp/: __init__.py  __main__.py  server.py
gui_tester/prompts/: gui_tester_system_prompt.txt  gui_tester_system_prompt_v2.txt
gui_tester/tools/: __init__.py  gui_testing_report_tool.py  restricted_playwright_computer_use.py
gui_tester/wrapper/: __init__.py  gui_tester_wrapper.py
