[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-tester"
version = "0.1.0"
description = "A self-contained GUI testing agent with direct CLI and stdio MCP entrypoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.0.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "mcp>=1.27.0",
  "playwright>=1.48.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "python-dotenv>=1.0.0"
]

[project.scripts]
gui-tester = "gui_tester.run_gui_tester:main"
gui-tester-mcp = "gui_tester.mcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gui_tester*", "comp_use*"]

[tool.setuptools.package-data]
gui_tester = ["config/*.json", "prompts/*.txt"]
"comp_use.custom_agent" = ["config/agent/*.json", "config/environment/*.json", "*.md"]
